# iojamp

./: CMakeLists.txt  CMakeReadme.txt  TODO
CMakeModules/: FindCURL.cmake
code/asm/: ftola.c  snapvector.c
code/botlib/: be_ea.c  be_interface.c  botlib.h  l_precomp.c  l_script.c
code/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  fx_local.h  fx_main.c  fx_primitive.c  fx_primitive_light.c  fx_primitive_particle.c  snd_as.c  snd_codec.c  snd_codec.h  snd_dma.c  snd_local.h  snd_main.c  snd_openal.c  snd_public.h
code/qcommon/: cm_load.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  msg.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  stringed.c  surfaceflags.h  vm.c
code/renderercommon/: tr_common.h  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/renderergl1/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_font.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_model.c  tr_model_ghoul2.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_surface.c  tr_world.c
code/sdl/: sdl_glimp.c  sdl_icon.h  sdl_input.c
code/server/: server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_snapshot.c  sv_world.c
misc/cmake/: runcmake.bat  runcmake_staticrenderer.bat
